# MyGrep

./: CMakeLists.txt  README.md  test_data.txt
src/: handle_output.cpp  handle_output.hpp  main.cpp  parse_args.cpp  parse_args.hpp  search_file.cpp  search_file.hpp
